Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>萨尔达传说王国之泪 — Game Wiki</title>
+<title>The Legend of Zelda: Tears of the Kingdom Guide — Game Wiki</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -367,23 +367,23 @@ Error message and password prompt
 {"created":"20230520101544625","text":"\\define .concat(1,2,3,4,5) $1$$2$$3$$4$$5$\n\\define .icon(_) \u003Cspan class=\"doc-icon\">{{$_$}}\u003C/span>\n\n\\define .children() \u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\\define .newTitle() New $(currentTiddler)$\n\\define .newTemplate() $:/template/$(currentTiddler)$\n\\define .newButton()\n\u003C$button>\n\u003C$action-createtiddler $basetitle=\u003C\u003C.newTitle>> tags={{!!title}} $template=\u003C\u003C.newTemplate>> >\n\u003C$action-navigate $to=\u003C\u003CcreateTiddler-title>>/>\n\u003C/$action-createtiddler>\n创建新{{!!title}}\n\u003C/$button>\n\\end\n\n\\define .figma(url,width:\"800\",height:\"450\") \u003Ciframe width=\"$width$\" height=\"$height$\" src={{{ [\u003C__url__>encodeuricomponent[]addprefix[https://www.figma.com/embed?embed_host=share&url=]] }}} allowfullscreen>\u003C/iframe>\n\n\u003Cpre>\u003C$view field=\"text\"/>\u003C/pre>","tags":"$:/tags/Macro","title":"$:/site/macros","modified":"20230521023126419","type":"text/vnd.tiddlywiki"},
 {"created":"20230520101753911","text":".doc-icon svg {\n\twidth: 1em;\n\theight: 1em;\n\tvertical-align: middle;\n}\niframe {\n\tborder: 1px solid rgba(0, 0, 0, 0.1);\n\tmax-width: 100%;\n}","tags":"$:/tags/Stylesheet","title":"$:/site/styles","modified":"20230521022433933","type":"text/css"},
 {"created":"20230520062149304","title":"$:/SiteSubtitle","text":"Game Wiki","modified":"20230520062152696"},
-{"created":"20230520062143414","title":"$:/SiteTitle","text":"萨尔达传说王国之泪","modified":"20230520062143414"},
+{"created":"20230520062143414","title":"$:/SiteTitle","text":"The Legend of Zelda: Tears of the Kingdom Guide","modified":"20230522115505763"},
 {"created":"20230520065023842","title":"$:/state/dropdown/keyboardshortcut/excise--457885534","text":"close","modified":"20230520065033100"},
 {"created":"20230520072215096","title":"$:/state/dropdown/keyboardshortcut/new-tiddler--457885534","text":"close","modified":"20230520072255607"},
 {"created":"20230520081426462","text":"hide","title":"$:/state/image-picker/system-245736920","modified":"20230520081427176"},
 {"created":"20230520062815252","title":"$:/state/showeditpreview","text":"no","modified":"20230522062917649"},
 {"created":"20230520074218838","title":"$:/state/sidebar","text":"yes","modified":"20230522042243228"},
 {"created":"20230520081454277","title":"$:/state/tab--1963855381","text":"$:/core/ui/ControlPanel/Toolbars","modified":"20230520081556182"},
-{"created":"20230520081756746","title":"$:/state/tab--2112689675","text":"$:/core/ui/ControlPanel/Advanced","modified":"20230521034015864"},
+{"created":"20230520081756746","title":"$:/state/tab--2112689675","text":"$:/core/ui/ControlPanel/Basics","modified":"20230522115458683"},
 {"created":"20230520081831837","title":"$:/state/tab--959111941","text":"$:/core/ui/ControlPanel/Cascades","modified":"20230521034018674"},
-{"created":"20230520054536804","title":"$:/state/tab-1749438307","text":"$:/core/ui/ControlPanel/Saving","modified":"20230522113952776"},
+{"created":"20230520054536804","title":"$:/state/tab-1749438307","text":"$:/core/ui/ControlPanel/Info","modified":"20230522115455596"},
 {"created":"20230520054538351","title":"$:/state/tab-2065006209","text":"$:/core/ui/ControlPanel/Saving/GitHub","modified":"20230522113956513"},
 {"created":"20230521034021098","title":"$:/state/tab-99014043","text":"$:/core/ui/ControlPanel/ViewTemplateBody","modified":"20230521034157876"},
 {"created":"20230520062749396","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/All","modified":"20230522062615786"},
-{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/More","modified":"20230522062502449"},
+{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/Open","modified":"20230522115303578"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/PageControls","modified":"20230520081640133"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230522113948477","text":"","list":"Home","modified":"20230522113948477"},
+{"title":"$:/StoryList","created":"20230522115453142","text":"","list":"Home","modified":"20230522115453142"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
 {"created":"20230520104750472","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI","tags":"","modified":"20230522062512321","title":"$:/template/地点"},
