--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@ Error message and password prompt
 
 <li>Thyphlo Ruins Skyview Tower</li>
 
+<li>Top 10 近战武器</li>
+
 <li>互动地图</li>
 
 <li>光线头</li>
@@ -383,7 +385,7 @@ Error message and password prompt
 {"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/Open","modified":"20230522115303578"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/PageControls","modified":"20230520081640133"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230522115453142","text":"","list":"Home","modified":"20230522115453142"},
+{"title":"$:/StoryList","text":"","list":"[[Top 10 近战武器]] Home"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
 {"created":"20230520104750472","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI","tags":"","modified":"20230522062512321","title":"$:/template/地点"},
@@ -416,6 +418,7 @@ Error message and password prompt
 {"created":"20230520081723373","title":"Sky","color":"#51a6f5","modified":"20230520081725919"},
 {"created":"20230520111114307","title":"Surface","color":"#4ebc64","modified":"20230520111118325"},
 {"created":"20230520112008329","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之后\n* [[Dinraal, the Fire Dragon]]","tags":"地点 Tower Surface","modified":"20230521024051869","title":"Thyphlo Ruins Skyview Tower"},
+{"created":"20230522133214258","text":"https://youtu.be/IQAYPiYB580","tags":"","title":"Top 10 近战武器","modified":"20230522133306011"},
 {"created":"20230520062551727","text":"* [[zeldamaps.com|https://zeldamaps.com/?game=TotK]] Free Markers\n* [[IGN|https://www.ign.com/maps/the-legend-of-zelda-tears-of-the-kingdom/hyrule]] Better search","tags":"Resource","title":"互动地图","modified":"20230521031309283"},
 {"created":"20230520063912950","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"光线头","modified":"20230520110156247"},
 {"created":"20230520063601215","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"冰龙头","modified":"20230520110307600"},
