Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -335,6 +335,8 @@ Error message and password prompt
 
 <li>素材</li>
 
+<li>蜥蜴战士素材</li>
+
 <li>进货路线</li>
 
 <li>魔犹伊</li>
@@ -396,11 +398,11 @@ Error message and password prompt
 {"created":"20230520054538351","title":"$:/state/tab-2065006209","text":"$:/core/ui/ControlPanel/Saving/GitHub","modified":"20230522113956513"},
 {"created":"20230522233357380","title":"$:/state/tab-267361470","text":"$:/core/ui/TiddlerInfo/References","modified":"20230522234236610"},
 {"created":"20230521034021098","title":"$:/state/tab-99014043","text":"$:/core/ui/ControlPanel/EditTemplateBody","modified":"20230522234205990"},
-{"created":"20230520062749396","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/Shadows","modified":"20230522232904230"},
-{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/Open","modified":"20230522233246821"},
+{"created":"20230520062749396","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/All","modified":"20230524155141181"},
+{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/More","modified":"20230524155140007"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230522232929573","text":"","list":"Home","modified":"20230522234017485"},
+{"title":"$:/StoryList","created":"20230524155132817","text":"","list":"蜥蜴战士素材 [[Top 10 近战武器]] [[常去的进货地点 (NGA)]] Home 进货路线","modified":"20230524155200759"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
 {"created":"20230520104750472","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI","tags":"","modified":"20230522062512321","title":"$:/template/地点"},
@@ -433,7 +435,7 @@ Error message and password prompt
 {"created":"20230520081723373","title":"Sky","color":"#51a6f5","modified":"20230520081725919"},
 {"created":"20230520111114307","title":"Surface","color":"#4ebc64","modified":"20230520111118325"},
 {"created":"20230520112008329","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之后\n* [[Dinraal, the Fire Dragon]]","tags":"地点 Tower Surface","modified":"20230521024051869","title":"Thyphlo Ruins Skyview Tower"},
-{"created":"20230522133214258","text":"https://youtu.be/IQAYPiYB580","tags":"","title":"Top 10 近战武器","modified":"20230522133306011"},
+{"created":"20230522133214258","text":"https://youtu.be/IQAYPiYB580","tags":"todo","title":"Top 10 近战武器","modified":"20230524155216159"},
 {"created":"20230520062551727","text":"* [[zeldamaps.com|https://zeldamaps.com/?game=TotK]] Free Markers\n* [[IGN|https://www.ign.com/maps/the-legend-of-zelda-tears-of-the-kingdom/hyrule]] Better search","tags":"Resource","title":"互动地图","modified":"20230521031309283"},
 {"created":"20230520063912950","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"光线头","modified":"20230520110156247"},
 {"created":"20230520063601215","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"冰龙头","modified":"20230520110307600"},
@@ -449,6 +451,7 @@ Error message and password prompt
 {"created":"20230521033934870","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","modified":"20230521033940257","title":"火箭"},
 {"created":"20230520110441315","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"生物","modified":"20230520110450553"},
 {"created":"20230520110332837","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"素材","modified":"20230520110341726"},
+{"created":"20230524155229532","text":"https://youtu.be/hMoRslziyZI","tags":"todo","title":"蜥蜴战士素材","modified":"20230524155256914"},
 {"created":"20230521031705210","text":"* [[小技巧，208攻搓背剑，血月提款路线等 (NGA)]]\n* [[常去的进货地点 (NGA)]]","tags":"Resource","modified":"20230521131904775","title":"进货路线"},
 {"created":"20230522055651523","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 刷新点\n\n每个山洞有一只。有的山洞有多个出口，算作一个山洞。\n\n山洞图标显示勾号表示已经找到魔犹伊了。","tags":"生物","modified":"20230522055844924","title":"魔犹伊"}
 ]</script><div id="storeArea" style="display:none;"></div>
