Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -303,6 +303,8 @@ Error message and password prompt
 
 <li>Thyphlo Ruins Skyview Tower</li>
 
+<li>Top 10 盾牌</li>
+
 <li>Top 10 近战武器</li>
 
 <li>互动地图</li>
@@ -402,7 +404,7 @@ Error message and password prompt
 {"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/More","modified":"20230524155140007"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230524155132817","text":"","list":"蜥蜴战士素材 [[Top 10 近战武器]] [[常去的进货地点 (NGA)]] Home 进货路线","modified":"20230524155200759"},
+{"title":"$:/StoryList","created":"20230524155132817","text":"","list":"[[Top 10 盾牌]] 蜥蜴战士素材 [[Top 10 近战武器]] [[常去的进货地点 (NGA)]] Home 进货路线","modified":"20230524155200759"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
 {"created":"20230520104750472","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI","tags":"","modified":"20230522062512321","title":"$:/template/地点"},
@@ -435,6 +437,7 @@ Error message and password prompt
 {"created":"20230520081723373","title":"Sky","color":"#51a6f5","modified":"20230520081725919"},
 {"created":"20230520111114307","title":"Surface","color":"#4ebc64","modified":"20230520111118325"},
 {"created":"20230520112008329","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之后\n* [[Dinraal, the Fire Dragon]]","tags":"地点 Tower Surface","modified":"20230521024051869","title":"Thyphlo Ruins Skyview Tower"},
+{"created":"20230524155715154","text":"https://youtu.be/aXMFXs86oB8","tags":"todo","title":"Top 10 盾牌","modified":"20230524155742597"},
 {"created":"20230522133214258","text":"https://youtu.be/IQAYPiYB580","tags":"todo","title":"Top 10 近战武器","modified":"20230524155216159"},
 {"created":"20230520062551727","text":"* [[zeldamaps.com|https://zeldamaps.com/?game=TotK]] Free Markers\n* [[IGN|https://www.ign.com/maps/the-legend-of-zelda-tears-of-the-kingdom/hyrule]] Better search","tags":"Resource","title":"互动地图","modified":"20230521031309283"},
 {"created":"20230520063912950","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"光线头","modified":"20230520110156247"},
