Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -337,6 +337,8 @@ Error message and password prompt
 
 <li>素材</li>
 
+<li>蜂蜜</li>
+
 <li>蜥蜴战士素材</li>
 
 <li>进货路线</li>
@@ -404,7 +406,7 @@ Error message and password prompt
 {"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/More","modified":"20230524155140007"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230524155132817","text":"","list":"[[Top 10 盾牌]] 蜥蜴战士素材 [[Top 10 近战武器]] [[常去的进货地点 (NGA)]] Home 进货路线","modified":"20230524155200759"},
+{"title":"$:/StoryList","created":"20230524155132817","text":"","list":"[[Top 10 盾牌]] 蜥蜴战士素材 [[Top 10 近战武器]] [[常去的进货地点 (NGA)]] Home 素材 蜂蜜 进货路线","modified":"20230524161043617"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
 {"created":"20230520104750472","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI","tags":"","modified":"20230522062512321","title":"$:/template/地点"},
@@ -454,6 +456,7 @@ Error message and password prompt
 {"created":"20230521033934870","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","modified":"20230521033940257","title":"火箭"},
 {"created":"20230520110441315","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"生物","modified":"20230520110450553"},
 {"created":"20230520110332837","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"素材","modified":"20230520110341726"},
+{"created":"20230524161043613","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\nhttps://youtu.be/pYhlf4w4nRc\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230524161123927","title":"蜂蜜"},
 {"created":"20230524155229532","text":"https://youtu.be/hMoRslziyZI","tags":"todo","title":"蜥蜴战士素材","modified":"20230524155256914"},
 {"created":"20230521031705210","text":"* [[小技巧，208攻搓背剑，血月提款路线等 (NGA)]]\n* [[常去的进货地点 (NGA)]]","tags":"Resource","modified":"20230521131904775","title":"进货路线"},
 {"created":"20230522055651523","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 刷新点\n\n每个山洞有一只。有的山洞有多个出口，算作一个山洞。\n\n山洞图标显示勾号表示已经找到魔犹伊了。","tags":"生物","modified":"20230522055844924","title":"魔犹伊"}
