--- a/index.html
+++ b/index.html
@@ -243,6 +243,20 @@ Error message and password prompt
 
 <li>$:/state/tabs/controlpanel/toolbars-1345989671</li>
 
+<li>$:/state/toc/TableOfContents-Database--118161433</li>
+
+<li>$:/state/toc/TableOfContents-Resource--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Database-地点--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Database-建筑材料--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Database-生物--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Database-素材--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Database-防具--118161433</li>
+
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
@@ -433,10 +447,17 @@ Error message and password prompt
 {"created":"20230522233357380","title":"$:/state/tab-267361470","text":"$:/core/ui/TiddlerInfo/References","modified":"20230522234236610"},
 {"created":"20230521034021098","title":"$:/state/tab-99014043","text":"$:/core/ui/ControlPanel/ViewTemplateBody","modified":"20230525101506932"},
 {"created":"20230520062749396","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/All","modified":"20230525133956224"},
-{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"TableOfContents","modified":"20230525134000294"},
+{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"TableOfContents","modified":"20230525134301177"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
+{"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"close","modified":"20230525134356102"},
+{"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"open","modified":"20230525134337246"},
+{"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"close","modified":"20230525134355636"},
+{"created":"20230525134349626","title":"$:/state/toc/TableOfContents/Database-建筑材料--118161433","text":"close","modified":"20230525134352244"},
+{"created":"20230525134345720","title":"$:/state/toc/TableOfContents/Database-生物--118161433","text":"close","modified":"20230525134347250"},
+{"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
+{"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230525080514428","text":"","list":"防具升级 Lynel 防具 蛮族套装","modified":"20230525102729855"},
+{"created":"20230525134318661","title":"$:/StoryList","text":"","list":"素材 蛮族套装 Home [[Armor Sets]] Resource","modified":"20230525134342875"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -449,7 +470,7 @@ Error message and password prompt
 {"created":"20230520081500704","title":"$:/view","text":"classic","modified":"20230520081519790"},
 {"created":"20230520063928635","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料 成品","title":"4风扇飞行器","modified":"20230520110256108"},
 {"created":"20230521031045423","text":"* [[IGN|https://www.ign.com/wikis/the-legend-of-zelda-tears-of-the-kingdom/Armor_Sets_and_Locations]]","tags":"Resource","modified":"20230521031324866","title":"Armor Sets"},
-{"created":"20230520105716761","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","title":"Database","modified":"20230520105801036"},
+{"created":"20230520105716761","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","title":"Database","modified":"20230525134300122","tags":"TableOfContents","caption":"数据库"},
 {"created":"20230520113323960","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115251510","title":"Dinraal, the Fire Dragon"},
 {"created":"20230520112110771","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115306859","title":"Farosh, the Lightning Dragon"},
 {"created":"20230520105317130","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=1%3A410&t=A10ip5OT6NU5MrBp-1\" height:\"500\" >>\n\n!! POI\n\n# [[4风扇飞行器]]\n\n","tags":"地点 Shrine Sky","modified":"20230521023224475","title":"Ganos Shrine"},
@@ -467,7 +488,7 @@ Error message and password prompt
 {"created":"20230520113326620","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115529870","title":"Naydra, the Frost Dragon"},
 {"created":"20230521033858671","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.featured>>\n\n!! POI\n\n# 神庙内\n#* [[火箭]] 无限刷新 (见[[常去的进货地点 (NGA)]])","tags":"地点","modified":"20230522063059040","title":"Oromuwak Shrine"},
 {"created":"20230520112542050","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Farosh, the Lightning Dragon]]","tags":"地点 Tower Surface","modified":"20230521024056707","title":"Popla Foothills Skyview Tower"},
-{"created":"20230520105920555","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","title":"Resource","modified":"20230521031037024"},
+{"created":"20230520105920555","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","title":"Resource","modified":"20230525134335400","tags":"TableOfContents","caption":"资源"},
 {"created":"20230522061914014","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[沃托里村]]及其东南 [[大剑香蕉]]","tags":"地点 Surface Shrine","modified":"20230522062459743","title":"Sifumim Shrine"},
 {"created":"20230520111332422","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之后","tags":"地点","modified":"20230521024123200","title":"Sitsum Shrine"},
 {"created":"20230520081723373","title":"Sky","color":"#51a6f5","modified":"20230520081725919"},
