Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -301,8 +301,6 @@ Error message and password prompt
 
 <li>Iun-orok Shrine</li>
 
-<li>Joju-u-u Shrine</li>
-
 <li>Light Dragon</li>
 
 <li>Lindor's Brow Skyview Tower</li>
@@ -312,6 +310,8 @@ Error message and password prompt
 <li>Mayanas Shrine</li>
 
 <li>Mount Lanayru Skyview Tower</li>
+
+<li>Mu-ustust Lightroot</li>
 
 <li>Nachoyah Shrine</li>
 
@@ -447,7 +447,7 @@ Error message and password prompt
 {"created":"20230522233357380","title":"$:/state/tab-267361470","text":"$:/core/ui/TiddlerInfo/References","modified":"20230522234236610"},
 {"created":"20230521034021098","title":"$:/state/tab-99014043","text":"$:/core/ui/ControlPanel/ViewTemplateBody","modified":"20230525101506932"},
 {"created":"20230520062749396","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/All","modified":"20230525133956224"},
-{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"TableOfContents","modified":"20230525134301177"},
+{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"TableOfContents","modified":"20230525151932025"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
 {"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"open","modified":"20230525150900303"},
 {"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"open","modified":"20230525134337246"},
@@ -457,7 +457,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230525150904516","text":"","list":"[[Ganos Shrine]] [[Mayanas Shrine]]","modified":"20230525150904516"},
+{"title":"$:/StoryList","created":"20230525150904516","text":"","list":"生物 Lynel [[Lindor's Brow Skyview Tower]] 地点 [[Mu-ustust Lightroot]] [[Ganos Shrine]] [[Mayanas Shrine]]","modified":"20230525155712196"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -478,12 +478,12 @@ Error message and password prompt
 {"created":"20230520083335975","text":"\\define copyActions() \u003C$action-sendmessage $message=\"tm-copy-to-clipboard\" $param=\u003C\u003CimageTitle>>/>\n\n\u003C\u003C.tip \"Click an icon to copy the title to the clipboard\">>\n\n\u003Cdiv class=\"tc-image-chooser\">\n\u003C$macrocall $name=\"image-picker-list\" filter=\"[all[shadows+tiddlers]tag[$:/tags/Image]]\" actions=\u003C\u003CcopyActions>> />\n\u003C/div>\n\n","tags":"","title":"Image Gallery","modified":"20230520083349838"},
 {"created":"20230525071007577","text":"你用近卫大剑搭一个高伤害的余料，跳斩砍地板先把耐久砍到只剩一点，就可以同时触发近卫红温翻倍和武器最后一击暴击的加成\n\n王族长剑/枪贴人马角，刚剑柄贴上级魔像3钻头是目前最好的武器。 \n\n盖米米卡神庙 Gemimik Shrine 回旋之力，用余料建造带出来 再去一始村 Tarrey Village 拆掉\n\n海盾没了可以去一始村买 \n\n魂之神殿用矿换，几十矿一个(系列的盾剑大剑强都可以换 \n\n能源衣服还是裤子神庙边上每次血月固定刷一堆左纳尼东西，我记得好像有把弓 \n\n开载具的时候要把火贤者关掉，不然会把载具压歪\n\n可以扔一个电流果进去电鱼\n\n每一条龙优先打爪子素材\n\n解除冰冷风暴后，可以在营地拿光亮鱼或者蘑菇换取大量弓箭。\n\n6. 苹果园可以刷大量怪物精华。\n\n4. 4个人马肝脏+任意虫子=1300块钱。\n\n2. 怪物精华可以将食物buff时间增加到半小时。\n\n\n","tags":"todo","title":"Inbox","modified":"20230525071018084"},
 {"created":"20230522062432648","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 通天术出来 [[大剑草]] [[宁静公主]] (见[[常去的进货地点 (NGA)]])","tags":"地点 Shrine Surface","modified":"20230522063048593","title":"Iun-orok Shrine"},
-{"created":"20230520111030567","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=35%3A101&t=z7vjpizcv7cCAMSB-1\">>\n\n!! POI\n\n# [[大剑香蕉]] 西北方向河边\n\n\n\n","tags":"地点 Shrine Surface","modified":"20230521023921332","title":"Joju-u-u Shrine"},
 {"created":"20230520111554099","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n* 随时针\n* 初始空岛南方平台的右方是最低点，可以传送到 [[Nachoyah Shrine]]\n* 拔出大师剑后高度下降，可以从 [[Sitsum Shrine]] 和 [[Thyphlo Ruins Skyview Tower]] 出发\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115421818","title":"Light Dragon"},
 {"created":"20230525062607868","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n* [[Lynel]] x3","tags":"地点 Tower Surface","modified":"20230525062717216","title":"Lindor's Brow Skyview Tower"},
-{"created":"20230525062724370","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n[img[https://blog.iany.me/uploads/202305/47KJOr/bEAQQq.png]]\n\n!! 刷新点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230525062832749","title":"Lynel"},
+{"created":"20230525062724370","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=115%3A1860&t=LuzplSZ3PNxXULtL-1\">>\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=115%3A1863&t=LuzplSZ3PNxXULtL-1\">>\n\n!! 刷新点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230525155657517","title":"Lynel"},
 {"created":"20230520064004722","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=86%3A1221&t=LuzplSZ3PNxXULtL-1\">>\n\n!! POI\n\n# 神庙内\n#* [[冰龙头]]\n#* [[冷冻果]]\n# 同一岛东北方向水池旁边\n#* [[4风扇飞行器]]\n#* [[光线头]]","title":"Mayanas Shrine","modified":"20230525150033046","tags":"地点 Shrine Sky"},
 {"created":"20230520113837414","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Naydra, the Frost Dragon]]","tags":"地点 Tower Surface","modified":"20230521024110733","title":"Mount Lanayru Skyview Tower"},
+{"created":"20230525155712195","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[Lynel]] x6","tags":"地点","modified":"20230525155738950","title":"Mu-ustust Lightroot"},
 {"created":"20230520111823260","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之前","tags":"地点 Sky Shrine","modified":"20230521024143997","title":"Nachoyah Shrine"},
 {"created":"20230520113326620","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115529870","title":"Naydra, the Frost Dragon"},
 {"created":"20230521033858671","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.featured>>\n\n!! POI\n\n# 神庙内\n#* [[火箭]] 无限刷新 (见[[常去的进货地点 (NGA)]])","tags":"地点","modified":"20230522063059040","title":"Oromuwak Shrine"},
