--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Database-建筑材料--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Database-武器余料建造--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Database-生物--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Database-素材--118161433</li>
@@ -383,9 +385,17 @@ Error message and password prompt
 
 <li>小技巧，208攻搓背剑，血月提款路线等 (NGA)</li>
 
+<li>属性材料</li>
+
 <li>常去的进货地点 (NGA)</li>
 
 <li>建筑材料</li>
+
+<li>戒心武器</li>
+
+<li>戒心长刀</li>
+
+<li>戒心长刀+属性材料</li>
 
 <li>武器</li>
 
@@ -407,7 +417,7 @@ Error message and password prompt
 
 <li>蜂蜜</li>
 
-<li>蜥蜴战士素材</li>
+<li>蜥蜴战士</li>
 
 <li>近卫大剑</li>
 
@@ -491,11 +501,12 @@ Error message and password prompt
 {"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"open","modified":"20230525134337246"},
 {"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"close","modified":"20230525162152257"},
 {"created":"20230525134349626","title":"$:/state/toc/TableOfContents/Database-建筑材料--118161433","text":"close","modified":"20230525134352244"},
+{"created":"20230525163907396","title":"$:/state/toc/TableOfContents/Database-武器余料建造--118161433","text":"open","modified":"20230525163907396"},
 {"created":"20230525134345720","title":"$:/state/toc/TableOfContents/Database-生物--118161433","text":"open","modified":"20230525162512393"},
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230525160211440","text":"","list":"防具 地点 [[Hyrule Castle]] [[Orochium Shrine]] 大刺球 素材 武器 近卫大剑 近卫武器 粗粗的棒子 武器余料建造 近卫大剑+人马刃角 粗粗的棒子+大刺球 todo [[Top 10 近战武器]]","modified":"20230525163457849"},
+{"title":"$:/StoryList","created":"20230525163805325","text":"","list":"武器 戒心长刀 戒心武器 戒心长刀+属性材料 生物 蜥蜴战士 Home todo","modified":"20230525164056581"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -557,8 +568,12 @@ Error message and password prompt
 {"created":"20230520111250752","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230520111254676","title":"大剑香蕉"},
 {"created":"20230522062736824","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230522062740772","title":"宁静公主"},
 {"created":"20230521131858515","text":"\u003C\u003C.icon $:/core/images/globe>> [[小技巧，208攻搓背剑，血月提款路线等 (NGA)|https://ngabbs.com/read.php?tid=36296144]]\n\n!! Actions\n\n* 水下竞技场人马","modified":"20230521132102663","title":"小技巧，208攻搓背剑，血月提款路线等 (NGA)","tags":""},
+{"created":"20230525163940477","text":"\u003C\u003C.children>>","title":"属性材料","modified":"20230525163950129"},
 {"created":"20230521033751771","text":"\u003C\u003C.icon $:/core/images/globe>> [[常去的进货地点 (NGA)|https://ngabbs.com/read.php?tid=36332945]]","modified":"20230522062954811","title":"常去的进货地点 (NGA)","tags":"External"},
 {"created":"20230520063031151","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"建筑材料","modified":"20230520104325426"},
+{"created":"20230525164100875","text":"偷袭威力增加\n\n\u003C\u003C.children>>","title":"戒心武器","modified":"20230525164130196"},
+{"created":"20230525164036921","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"武器 戒心武器","modified":"20230525164054590","title":"戒心长刀"},
+{"created":"20230525163656332","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[戒心长刀]] + {{属性材料||$:/core/ui/TagTemplate}}","tags":"武器余料建造","modified":"20230525164015821","title":"戒心长刀+属性材料"},
 {"created":"20230525160635718","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"武器","modified":"20230525160647314"},
 {"created":"20230525160233560","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"武器余料建造","modified":"20230525160257892"},
 {"created":"20230522062237825","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n传送点 [[Sifumim Shrine]]\n\n免费住宿、料理和宝箱\n\n!! POI","tags":"地点 Village Surface","modified":"20230522062454698","title":"沃托里村"},
@@ -567,9 +582,9 @@ Error message and password prompt
 {"created":"20230525160707857","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n砍树\n","tags":"武器","modified":"20230525161918418","title":"粗粗的棒子"},
 {"created":"20230525160411058","text":"[[粗粗的棒子]]+[[大刺球]]","tags":"武器余料建造","modified":"20230525162316709","title":"粗粗的棒子+大刺球"},
 {"created":"20230520110332837","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"素材","modified":"20230520110341726"},
-{"created":"20230525093112075","text":"* 蛮族套装：蛮族头盔、蛮族服、蛮族短裤\n* 防具属性：攻击提升 {{攻击||$:/core/ui/TagTemplate}}\n* 套装奖励：蓄力攻击精力持久 {{蓄力||$:/core/ui/TagTemplate}}\n\n!! 升级材料\n\n* 防 御 力：3（初始）→5（一星）→ 8（二星）→12（三星）→ 20（四星）\n* 一星：[[大剑草]]×3\n* 二星：[[莱尼尔|Lynel]]的刃角×2、[[莱尼尔|Lynel]]的碎角×2、[[大剑蘑菇]]x5\n* 三星：蓝鬃莱尼尔的刃角×3、蓝鬃莱尼尔的碎角×3、大剑螃蟹x3\n* 四星：白鬃莱尼尔的刃角×3、白鬃莱尼尔的碎角×3、大剑独角仙x3","tags":"防具 攻击 蓄力","modified":"20230525103110095","title":"蛮族套装"},
+{"created":"20230525093112075","text":"* 蛮族套装：蛮族头盔、蛮族服、蛮族短裤\n* 防具属性：攻击提升 {{攻击||$:/core/ui/TagTemplate}}\n* 套装奖励：蓄力攻击精力持久 {{蓄力||$:/core/ui/TagTemplate}}\n\n!! 升级材料\n\n* 防 御 力：3（初始）→5（一星）→ 8（二星）→12（三星）→ 20（四星）\n* 一星：[[大剑草]]×3\n* 二星：[[莱尼尔|Lynel]]的刃角×2、[[莱尼尔|Lynel]]的碎角×2、[[大剑蘑菇]]x5\n* 三星：蓝鬃莱尼尔的刃角×3、蓝鬃莱尼尔的碎角×3、大剑螃蟹x3\n* 四星：白鬃莱尼尔的刃角×3、白鬃莱尼尔的碎角×3、大剑独角仙x3","tags":"防具 攻击 蓄力 todo","modified":"20230525163538128","title":"蛮族套装"},
 {"created":"20230524161043613","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\nhttps://youtu.be/pYhlf4w4nRc\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230524161123927","title":"蜂蜜"},
-{"created":"20230524155229532","text":"https://youtu.be/hMoRslziyZI","tags":"todo","title":"蜥蜴战士素材","modified":"20230524155256914"},
+{"created":"20230525163821378","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 刷新点\n\nhttps://youtu.be/hMoRslziyZI\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物 todo 属性材料","modified":"20230525163931375","title":"蜥蜴战士"},
 {"created":"20230525163245757","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n[[近卫武器]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"武器 近卫武器","modified":"20230525163441216","title":"近卫大剑"},
 {"created":"20230525162321299","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[近卫大剑]] + [[Lynel]] 刃角\n","tags":"武器余料建造","modified":"20230525162524905","title":"近卫大剑+人马刃角"},
 {"created":"20230525163341144","text":"濒临损坏时威力增加\n\n---\n\n\u003C\u003C.children>>","title":"近卫武器","modified":"20230525163432102"},
