--- a/index.html
+++ b/index.html
@@ -361,8 +361,6 @@ Error message and password prompt
 
 <li>Top 10 盾牌</li>
 
-<li>Top 10 近战武器</li>
-
 <li>Untitled</li>
 
 <li>七宝刀</li>
@@ -530,7 +528,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230525163805325","text":"","list":"卓拉武器 武器余料建造 光鳞之枪+冰属性素材 光鳞之枪 七宝刀+高攻素材 七宝刀 格鲁德武器 斩铁大剑+高攻素材 [[Draft of '斩铁大剑']] 粗粗的棒子+大刺球 武器 戒心长刀 戒心武器 戒心长刀+属性材料 生物 蜥蜴战士 Home todo","modified":"20230525165620880"},
+{"title":"$:/StoryList","created":"20230525165717198","text":"","list":"Home todo","modified":"20230525165717198"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -580,7 +578,6 @@ Error message and password prompt
 {"created":"20230520112008329","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之后\n* [[Dinraal, the Fire Dragon]]","tags":"地点 Tower Surface","modified":"20230521024051869","title":"Thyphlo Ruins Skyview Tower"},
 {"created":"20230525160127116","text":"\u003C\u003C.children>>","title":"todo","modified":"20230525160135714"},
 {"created":"20230524155715154","text":"https://youtu.be/aXMFXs86oB8","tags":"todo","title":"Top 10 盾牌","modified":"20230524155742597"},
-{"created":"20230522133214258","text":"https://youtu.be/IQAYPiYB580","tags":"todo","title":"Top 10 近战武器","modified":"20230524155216159"},
 {"title":"Untitled","text":"蛮族套装升级材料"},
 {"created":"20230525165534053","text":"","title":"七宝刀","modified":"20230525165543369","tags":"格鲁德武器 英杰武器"},
 {"created":"20230525165304824","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[七宝刀]] + 高攻素材","tags":"武器余料建造","modified":"20230525165405361","title":"七宝刀+高攻素材"},
