Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -383,6 +383,8 @@ Error message and password prompt
 
 <li>卓拉武器</li>
 
+<li>卡卡利科村</li>
+
 <li>地点</li>
 
 <li>大刺球</li>
@@ -528,7 +530,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230525165717198","text":"","list":"Home todo","modified":"20230525165717198"},
+{"title":"$:/StoryList","created":"20230525165717198","text":"","list":"地点 卡卡利科村 Home todo 蜥蜴战士","modified":"20230525170338082"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -589,6 +591,7 @@ Error message and password prompt
 {"created":"20230520063601215","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"冰龙头","modified":"20230520110307600"},
 {"created":"20230520064818433","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>","tags":"素材","title":"冷冻果","modified":"20230520110405869"},
 {"created":"20230525164716484","text":"湿身威力增加","tags":"","title":"卓拉武器","modified":"20230525165654013"},
+{"created":"20230525170338081","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=126%3A523&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* 西北方向 无属性[[蜥蜴战士]]巢穴\n","tags":"地点","modified":"20230525170457292","title":"卡卡利科村"},
 {"created":"20230520064224697","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"地点","modified":"20230520104729787"},
 {"created":"20230525161728444","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[余料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"余料","modified":"20230525161823382","title":"大刺球"},
 {"created":"20230522062746382","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230522062816849","title":"大剑草"},
