Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@ Error message and password prompt
 
 <li>Ganos Shrine</li>
 
+<li>Gerudo Canyon Skyview Tower</li>
+
 <li>Home</li>
 
 <li>Hyrule Castle</li>
@@ -530,7 +532,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230525165717198","text":"","list":"地点 卡卡利科村 Home todo 蜥蜴战士","modified":"20230525170338082"},
+{"title":"$:/StoryList","created":"20230525165717198","text":"","list":"地点 [[Gerudo Canyon Skyview Tower]] 卡卡利科村 Home todo 蜥蜴战士","modified":"20230525171410177"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -554,6 +556,7 @@ Error message and password prompt
 {"created":"20230525165610233","text":"","title":"Draft of '斩铁大剑'","draft.title":"斩铁大剑","draft.of":"斩铁大剑","modified":"20230525165610233","tags":"英杰武器"},
 {"created":"20230520112110771","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115306859","title":"Farosh, the Lightning Dragon"},
 {"created":"20230520105317130","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=86%3A1287&t=LuzplSZ3PNxXULtL-1\" >>\n\n!! POI\n\n# [[4风扇飞行器]]\n\n","tags":"地点 Shrine Sky","modified":"20230525151604886","title":"Ganos Shrine"},
+{"created":"20230525171410176","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=126%3A674&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* 属性[[蜥蜴战士]] 白天火晚上冰","tags":"地点 Surface Tower","modified":"20230525171508214","title":"Gerudo Canyon Skyview Tower"},
 {"created":"20230520062305709","text":"!! 数据库\n\n{{Database}}\n\n!! 资源\n\n{{Resource}}","tags":"Nav","title":"Home","modified":"20230525160146749"},
 {"created":"20230525163135855","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! F1\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=122%3A512&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* [[近卫大剑]]","tags":"地点 Dungeon","modified":"20230525163219599","title":"Hyrule Castle"},
 {"created":"20230520083335975","text":"\\define copyActions() \u003C$action-sendmessage $message=\"tm-copy-to-clipboard\" $param=\u003C\u003CimageTitle>>/>\n\n\u003C\u003C.tip \"Click an icon to copy the title to the clipboard\">>\n\n\u003Cdiv class=\"tc-image-chooser\">\n\u003C$macrocall $name=\"image-picker-list\" filter=\"[all[shadows+tiddlers]tag[$:/tags/Image]]\" actions=\u003C\u003CcopyActions>> />\n\u003C/div>\n\n","tags":"","title":"Image Gallery","modified":"20230520083349838"},
