--- a/index.html
+++ b/index.html
@@ -305,8 +305,6 @@ Error message and password prompt
 
 <li>Dinraal, the Fire Dragon</li>
 
-<li>Draft of '斩铁大剑'</li>
-
 <li>Farosh, the Lightning Dragon</li>
 
 <li>Ganos Shrine</li>
@@ -527,7 +525,7 @@ Error message and password prompt
 {"created":"20230522234054966","title":"$:/state/tab--86143343","text":"$:/core/ui/ControlPanel/Plugins/Installed/Themes","modified":"20230522234054966"},
 {"created":"20230525102639190","title":"$:/state/tab--945449782","text":"$:/core/ui/TiddlerInfo/References","modified":"20230525102639190"},
 {"created":"20230520081831837","title":"$:/state/tab--959111941","text":"$:/core/ui/ControlPanel/Cascades","modified":"20230525101504798"},
-{"created":"20230520054536804","title":"$:/state/tab-1749438307","text":"$:/core/ui/ControlPanel/Info","modified":"20230522234119155"},
+{"created":"20230520054536804","title":"$:/state/tab-1749438307","text":"$:/core/ui/ControlPanel/Saving","modified":"20230526073852108"},
 {"created":"20230522233441268","title":"$:/state/tab-1996452050","text":"$:/core/ui/TiddlerInfo/Listed","modified":"20230522233443822"},
 {"created":"20230520054538351","title":"$:/state/tab-2065006209","text":"$:/core/ui/ControlPanel/Saving/GitHub","modified":"20230522113956513"},
 {"created":"20230522233357380","title":"$:/state/tab-267361470","text":"$:/core/ui/TiddlerInfo/References","modified":"20230522234236610"},
@@ -536,7 +534,7 @@ Error message and password prompt
 {"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"TableOfContents","modified":"20230525162452904"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
 {"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"open","modified":"20230525150900303"},
-{"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"open","modified":"20230525134337246"},
+{"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"close","modified":"20230526073958094"},
 {"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"close","modified":"20230525162152257"},
 {"created":"20230525134349626","title":"$:/state/toc/TableOfContents/Database-建筑材料--118161433","text":"close","modified":"20230525134352244"},
 {"created":"20230525172350923","title":"$:/state/toc/TableOfContents/Database-武器--118161433","text":"close","modified":"20230525172448420"},
@@ -545,7 +543,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","text":"","list":"Home Tip 蛮族套装"},
+{"title":"$:/StoryList","created":"20230526073820898","text":"","list":"Home Tip 蛮族套装","modified":"20230526073843043"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -566,7 +564,6 @@ Error message and password prompt
 {"created":"20230521031045423","text":"* [[防具]]\n* [[IGN|https://www.ign.com/wikis/the-legend-of-zelda-tears-of-the-kingdom/Armor_Sets_and_Locations]]","tags":"Resource","modified":"20230525172309664","title":"Armor Sets"},
 {"created":"20230520105716761","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","title":"Database","modified":"20230525134300122","tags":"TableOfContents","caption":"数据库"},
 {"created":"20230520113323960","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115251510","title":"Dinraal, the Fire Dragon"},
-{"created":"20230525165610233","text":"","title":"Draft of '斩铁大剑'","draft.title":"斩铁大剑","draft.of":"斩铁大剑","modified":"20230525165610233","tags":"英杰武器"},
 {"created":"20230520112110771","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115306859","title":"Farosh, the Lightning Dragon"},
 {"created":"20230520105317130","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=86%3A1287&t=LuzplSZ3PNxXULtL-1\" >>\n\n!! POI\n\n# [[4风扇飞行器]]\n\n","tags":"地点 Shrine Sky","modified":"20230525151604886","title":"Ganos Shrine"},
 {"created":"20230525172627073","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[蓄电池+强力风扇]]","tags":"地点 Shrine Surface","modified":"20230525172703530","title":"Gemimik Shrine"},
